uploaded new favicons

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Badminton Queue</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./badminton-16.png" type="image/x-icon" />
+    <link rel="icon" href="./badminton-32.png" type="image/x-icon" />
   </head>
   <body>
     <div class="container">
