fixed the am pm bug and added socket.io for immediate update.

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="./badminton-16.png" type="image/x-icon" />
     <link rel="icon" href="./badminton-32.png" type="image/x-icon" />
+    <script
+      src="https://cdn.socket.io/4.8.1/socket.io.esm.min.js"
+      type="module"
+    ></script>
   </head>
   <body>
     <div class="container">
@@ -35,6 +39,6 @@
         </tbody>
       </table>
     </div>
-    <script src="./script.js"></script>
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
