--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,6 @@
         </tbody>
       </table>
     </div>
-    <script src="./bundle.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
