added some cool animations and fixed the trim problem.

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         placeholder="Enter your name"
         maxlength="10"
       />
-      <button id="joinButton">Join</button>
+      <button id="joinButton">JOIN</button>
 
       <h2>Players 👦</h2>
       <h4 id="emptyQueueMessage" class="hidden">The Queue is empty! 🪹</h4>
