final touch done

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="./badminton-16.png" type="image/x-icon" />
     <link rel="icon" href="./badminton-32.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kablammo&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -20,7 +26,7 @@
       />
       <button id="joinButton">JOIN</button>
 
-      <h2>Players 👦</h2>
+      <h2 id="title-tag">Players</h2>
       <h4 id="emptyQueueMessage" class="hidden">The Queue is empty! 🪹</h4>
       <table id="queueTable">
         <thead>
