added the badminton logo to the correct place.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Badminton Queue 🏸</h1>
+      <h1>Badminton Queue</h1>
       <h2 id="currentDate"></h2>
       <input
         type="text"
@@ -26,7 +26,7 @@
       />
       <button id="joinButton">JOIN</button>
 
-      <h2 id="title-tag">Players</h2>
+      <h2 id="title-tag">Players 🏸</h2>
       <h4 id="emptyQueueMessage" class="hidden">The Queue is empty! 🪹</h4>
       <table id="queueTable">
         <thead>
